remove scrollbar on the whole transcription form, fix margins, on mobile: push the transcription form down to make way for the menu when it expands.

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,6 +3,12 @@ html, body, form {
   height: 100%;
 }
 
+.transcription-form {
+  padding-bottom: 0px;
+  position: fixed;
+  top: 70px;
+}
+
 input[type="submit"] {
   text-shadow: none;
   margin-right: 15px;
@@ -17,6 +23,7 @@ input[type="submit"] {
 
 .panel {
   margin-bottom: 0px;
+  margin-right: 45px;
 }
 
 .note-resizebar {
